--- a/app/views/settings.xml
+++ b/app/views/settings.xml
@@ -8,18 +8,12 @@
 				<TableViewRow id="privacy" title="Privacy Policy" hasChild="true" />
 			</TableView>
 			
-			<TableView height="45dp">
-				<TableViewRow id="logs" title="Send Application Logs" hasChild="true" />
-			</TableView>
-			
 			<Label id="copyright" />
-			<Label id="version" />
 			
-			<TableView height="45dp">
-				<TableViewRow id="acknowledgements" title="Acknowledgements" hasChild="true" />
+			<TableView height="90dp">
+				<TableViewRow id="refresh" title="Refresh App" hasChild="true" />
+				<TableViewRow id="restart" title="New App" hasChild="true" />
 			</TableView>
-			
-			<Label text="This application was created using the open source ChariTi framework, freely available at:\nhttp://chariti.mobi/\n\nChariTi ‌© 2013 Matthew Congrove" />
 		</ScrollView>
 	</View>
 </Alloy>
